<resources>
    <string name="app_name">Age In Minutes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_date">Select date</string>
    <string name="calculate_your">CALCULATE YOUR</string>
    <string name="age">AGE</string>
    <string name="in_minutes">IN MINUTES</string>
    <string name="selected_date">Selected Date</string>
    <string name="age_in_minutes">Age In Minutes</string>
    <string name="age_in_days">Age In Days</string>
</resources>