<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragmentModel"
            type="small.app.ageinminutes.ViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_vertical"
            android:background="#FFFFFF"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:context=".MainFragment">

            <!-- TODO: Update blank fragment layout -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|fill_vertical"
                android:layout_marginTop="@dimen/standard_marging"
                android:gravity="center|center_horizontal"
                android:text="@string/calculate_your"
                android:textColor="@color/design_default_color_error" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|fill_vertical"
                android:layout_marginTop="@dimen/standard_marging"
                android:background="@color/teal_200"
                android:gravity="center|center_horizontal"
                android:paddingStart="@dimen/standard_marging"
                android:paddingTop="@dimen/standard_marging"
                android:paddingEnd="@dimen/standard_marging"
                android:paddingBottom="@dimen/standard_marging"
                android:text="@string/age"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|fill_vertical"
                android:layout_marginTop="@dimen/standard_marging"
                android:gravity="center|center_horizontal"
                android:text="@string/in_minutes"
                android:textColor="@color/design_default_color_error" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_date" />

            <TextView
                android:id="@+id/textViewSelectedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_marging" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|fill_vertical"
                android:gravity="center|center_horizontal"
                android:text="@string/selected_date"
                android:textColor="@color/dateColor" />

            <TextView
                android:id="@+id/textViewAgeInMinutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|fill_vertical"
                android:layout_marginBottom="@dimen/standard_marging"
                android:gravity="center|center_horizontal"
                android:text="@string/age_in_minutes"
                android:textColor="@color/dateColor" />

            <TextView
                android:id="@+id/textViewAgeInDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|fill_vertical"
                android:layout_marginBottom="@dimen/standard_marging"
                android:gravity="center|center_horizontal"
                android:text="@string/age_in_days"
                android:textColor="@color/dateColor" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>